@@ -8,14 +8,12 @@ A. Paper about MathGL!!!
 1. Export to X3D, COLLADA !!!
 2. GTK window/widgets
 3. Labels at TriCont()
-4. Drawing of saddle quadrangles
 5. 2D textures as one of standard way for coloring -- if '%' present in color scheme
 6. Graph(mreal x, mreal y, names, styles, font, size); -- names = "node1[node2,node3,node4[node5,node6]]", styles -- the same + apply for subnodes if absent. Styles are colors (fill,border,line), dash (to subnodes), marks "dos^v><", arrows.
 7. Use libtcc for mglFormula only! -- note that MGL formulas (i.e. for mglData) are fast enough. The only possible speeding up for Fill() and Modify() functions
 8. 3D text (with depth, for Quality=3)
 9. Text along 3D curve (for Quality=3)
 10. introduce new primitive type=5 -- arrow for Quality&3!=3. for better drawing in projections + json/view ?!?
-11. enable line width for mesh and fall???
 12. WX window/widgets
 13. Textured brushes for drawing: (a) as 8*8 array, i.e. long (save only index in mglPrim::type); (b) BrushWidth; (c) BrushAngle; (d) some pixels become transparent; (e) count from edge of image; (f) symbols {+-;=\*<>^osdiODSI}. Question: how this can be exported???
 
